# Container-Training

./: README.md
task-list/: pyproject.toml
task-list/task_list/: main.py  task.py
