[tool.poetry]
name = "task-list"
version = "0.1.0"
description = ""
authors = ["kory291 <01lukasschaefer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg = "^3.1.18"
commitizen = "^3.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
